# NMRSpectrometer

./: CMakeLists.txt  main.cpp
AnalogDiscovery2_Control/: main.cpp
AnalogDiscovery2_Control/WF_SDK/: WF_SDK.h  acquire_data.cpp  logic.cpp  pattern.cpp  scope_multiple_triggers.cpp  scope_multiple_triggers.h  wavegen.cpp
Arduino_Control/: Arduino_Control.ino
Arduino_Control/src/: Parameters.h
ControlSoftware/Arduino/: Arduino_Control.ino
ControlSoftware/Arduino/src/: Parameters.h
ElectronicsSchematics/: NMRSpectrometer.kicad_prl  NMRSpectrometer.kicad_pro  NMRSpectrometer.kicad_sch  PolarizationCoilSupply.kicad_sch  ReceiveCircuitry.kicad_sch  TransmitCircuitry.kicad_sch  TransmitReceiveCircuitry.kicad_sch
ElectronicsSchematics/CustomLibrary/3570-1331-051/: 3570-1331-051.kicad_mod  3570-1331-051.kicad_sym  3570-1331-051.lib
ElectronicsSchematics/CustomLibrary/LD1084/: LD1084V.kicad_mod  LD1084V.kicad_sym  LD1084V.lib
HardwareCharacterization/ReceiveCircuitry/: FreqData.txt  ReceiveCircuitry.py  Stage1.csv  Stage2.csv
NMRSpectrometerSimulation/: NMRSpectrometerSimulation.py  TransmitPulse_Helmholtz.csv  TransmitPulse_Solenoid.csv
Processing/: ProcessFFT.py
RecieveCircuitrySimulation/: FreqData.txt  ReceiveCircuitry.asc  ReceiveCircuitry.py  TimeData.txt
Simulation/: MagneticField.py
WF_SDK/: WF_SDK.h  acquire_data.h  wavegen.cpp
